--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -78,7 +78,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an introduction, normally, it is done at the very end, when all the other content in the notebook is completed but just before the abstract (which is short version of the introduction) ... "
+    "Technical analysis is a fundamental tool for investors seeking to make informed decisions in their financial operations. It involves analyzing the behavior and movement of the prices of a financial asset with the aim of predicting its behavior.\n",
+    "\n",
+    "In this project, we will use training and test data and generate buy and sell signals for a currency. We will apply a trading algorithm to these signals with the goal of optimizing profits."
    ]
   },
   {
@@ -122,8 +124,7 @@
    "source": [
     "- pandas>=1.1.1 \n",
     "- numpy>=1.19.1\n",
-    "- jupyter>=1.0.0\n",
-    "- _Add any other here_"
+    "- jupyter>=1.0.0"
    ]
   },
   {
@@ -203,203 +204,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>tick_volume</th>\n",
-       "      <th>spread</th>\n",
-       "      <th>real_volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>1.12080</td>\n",
-       "      <td>1.12140</td>\n",
-       "      <td>1.11628</td>\n",
-       "      <td>1.11712</td>\n",
-       "      <td>486302</td>\n",
-       "      <td>15</td>\n",
-       "      <td>67538850000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>1.11712</td>\n",
-       "      <td>1.11792</td>\n",
-       "      <td>1.11243</td>\n",
-       "      <td>1.11601</td>\n",
-       "      <td>598129</td>\n",
-       "      <td>13</td>\n",
-       "      <td>89719350000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-01-06</td>\n",
-       "      <td>1.11637</td>\n",
-       "      <td>1.12049</td>\n",
-       "      <td>1.11565</td>\n",
-       "      <td>1.11958</td>\n",
-       "      <td>554376</td>\n",
-       "      <td>15</td>\n",
-       "      <td>83156400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-01-07</td>\n",
-       "      <td>1.11957</td>\n",
-       "      <td>1.11969</td>\n",
-       "      <td>1.11329</td>\n",
-       "      <td>1.11513</td>\n",
-       "      <td>554991</td>\n",
-       "      <td>14</td>\n",
-       "      <td>83248650000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-01-08</td>\n",
-       "      <td>1.11512</td>\n",
-       "      <td>1.11675</td>\n",
-       "      <td>1.11012</td>\n",
-       "      <td>1.11046</td>\n",
-       "      <td>739679</td>\n",
-       "      <td>15</td>\n",
-       "      <td>110951850000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>255</th>\n",
-       "      <td>2020-12-24</td>\n",
-       "      <td>1.21834</td>\n",
-       "      <td>1.22150</td>\n",
-       "      <td>1.21766</td>\n",
-       "      <td>1.21805</td>\n",
-       "      <td>420206</td>\n",
-       "      <td>13</td>\n",
-       "      <td>63030900000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>256</th>\n",
-       "      <td>2020-12-28</td>\n",
-       "      <td>1.21850</td>\n",
-       "      <td>1.22498</td>\n",
-       "      <td>1.21795</td>\n",
-       "      <td>1.22154</td>\n",
-       "      <td>638127</td>\n",
-       "      <td>15</td>\n",
-       "      <td>95719050000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>257</th>\n",
-       "      <td>2020-12-29</td>\n",
-       "      <td>1.22154</td>\n",
-       "      <td>1.22743</td>\n",
-       "      <td>1.22062</td>\n",
-       "      <td>1.22466</td>\n",
-       "      <td>650766</td>\n",
-       "      <td>15</td>\n",
-       "      <td>97614900000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>258</th>\n",
-       "      <td>2020-12-30</td>\n",
-       "      <td>1.22466</td>\n",
-       "      <td>1.23092</td>\n",
-       "      <td>1.22457</td>\n",
-       "      <td>1.22935</td>\n",
-       "      <td>659800</td>\n",
-       "      <td>15</td>\n",
-       "      <td>98970000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>259</th>\n",
-       "      <td>2020-12-31</td>\n",
-       "      <td>1.22935</td>\n",
-       "      <td>1.23086</td>\n",
-       "      <td>1.22142</td>\n",
-       "      <td>1.22161</td>\n",
-       "      <td>374748</td>\n",
-       "      <td>13</td>\n",
-       "      <td>56212200000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>260 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           time     open     high      low    close  tick_volume  spread  \\\n",
-       "0    2020-01-02  1.12080  1.12140  1.11628  1.11712       486302      15   \n",
-       "1    2020-01-03  1.11712  1.11792  1.11243  1.11601       598129      13   \n",
-       "2    2020-01-06  1.11637  1.12049  1.11565  1.11958       554376      15   \n",
-       "3    2020-01-07  1.11957  1.11969  1.11329  1.11513       554991      14   \n",
-       "4    2020-01-08  1.11512  1.11675  1.11012  1.11046       739679      15   \n",
-       "..          ...      ...      ...      ...      ...          ...     ...   \n",
-       "255  2020-12-24  1.21834  1.22150  1.21766  1.21805       420206      13   \n",
-       "256  2020-12-28  1.21850  1.22498  1.21795  1.22154       638127      15   \n",
-       "257  2020-12-29  1.22154  1.22743  1.22062  1.22466       650766      15   \n",
-       "258  2020-12-30  1.22466  1.23092  1.22457  1.22935       659800      15   \n",
-       "259  2020-12-31  1.22935  1.23086  1.22142  1.22161       374748      13   \n",
-       "\n",
-       "      real_volume  \n",
-       "0     67538850000  \n",
-       "1     89719350000  \n",
-       "2     83156400000  \n",
-       "3     83248650000  \n",
-       "4    110951850000  \n",
-       "..            ...  \n",
-       "255   63030900000  \n",
-       "256   95719050000  \n",
-       "257   97614900000  \n",
-       "258   98970000000  \n",
-       "259   56212200000  \n",
-       "\n",
-       "[260 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "- Divisa: EURUSD\n",
+    "- Datos de entrenamiento: 2020 \n",
+    "- Datos de prueba: 2021."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data_Test,data_Train = extraccion_data()\n",
     "data_Train"
@@ -5251,19 +5068,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Función de utilidad\n",
-    "- Parámetro a optimizar\n",
-    "- Espacio de búsqueda\n",
-    "- Tiempo de búsqueda exhaustiva\n",
-    "- Método de optimización"
+    "**Función de utilidad**: \n",
+    "\n",
+    "- La función de utilidad o función de objetivo es la maximización de las ganancias. \n",
+    "- La medida de atribución al desempeño es el cash disponible en la cuenta.\n",
+    "\n",
+    "**Parámetros a optimizar:**\n",
+    "\n",
+    "- Parámetro: 1\n",
+    "    - Nombre: Volumen\n",
+    "    - Descripción: El volumen de unidades para abrir una operación.\n",
+    "    - Tipo de valor: numérico\n",
+    "    - Rango de valores: 5000 - 15000\n",
+    "    - Tamaño de paso mínimo: 1\n",
+    "    \n",
+    "- Parámetro: 2\n",
+    "    - Nombre: StopLoss\n",
+    "    - Descripción: El nivel de precio en el que se cerrará automáticamente una operación para limitar las pérdidas.\n",
+    "    - Tipo de valor: numérico\n",
+    "    - Rango de valores: 0.1 - 0.9\n",
+    "    - Tamaño de paso mínimo: 1\n",
+    "    \n",
+    "- Parámetro: 3\n",
+    "    - Nombre: TakeProfit\n",
+    "    - Descripción: El nivel de precio en el que se cerrará automáticamente una operación para asegurar las ganancias.\n",
+    "    - Tipo de valor: numérico\n",
+    "    - Rango de valores: 0.1 - 0.9\n",
+    "    - Tamaño de paso mínimo: 1\n",
+    "    \n",
+    "**Espacio de búsqueda**\n",
+    "\n",
+    "- Parámetro 1 (Volumen): Rango de valores de 5,000 a 15,000\n",
+    "- Parámetro 2 (StopLoss): 9 valores posibles (0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9)\n",
+    "- Parámetro 3 (TakeProfit): 9 valores posibles (0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9)\n",
+    "\n",
+    "Por lo tanto, el espacio de búsqueda total para este problema de optimización es: \n",
+    "\n",
+    "(15000 - 5000 + 1) x 9 x 9 = **6561** posibles combinaciones de valores de parámetros.\n",
+    "\n",
+    "**Tiempo de búsqueda exhaustiva**\n",
+    "\n",
+    "Tiempo total = tamaño del espacio de búsqueda * tiempo por búsqueda\n",
+    "\n",
+    "6561 * 5 segundos = 32,805 segundos\n",
+    "\n",
+    "Lo que equivale a 8.5 horas aproximadamente.\n",
+    "\n",
+    "**Método de optimización**\n",
+    "\n",
+    "- PSO (Optimización por Enjambre de Partículas)\n",
+    "- Búsqueda exhaustiva"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -5284,6 +5139,20 @@
    "metadata": {},
    "source": [
     "## <font color= #6B6B6B> 7.1 Periodo de optimización </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color= #6B6B6B> 7.1.1 Backtest data</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se muestra el primer trading con los datos de entrenamiento:"
    ]
   },
   {
@@ -5321,40 +5190,23 @@
     }
    ],
    "source": [
-    "# El primer triding con los datos de entrenamiento \n",
     "traiding_train = fun.tradear(data_Train_tec,0.1, 0.1, 8000, visuales = True, optimizar=False)\n",
     "print(f'Cash = {traiding_train[-1]:.4f}')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 20/20 [02:08<00:00,  6.43s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "stop_loss          0.142105\n",
-       "take_profit        0.184211\n",
-       "volumen         5000.000000\n",
-       "profit         97247.668250\n",
-       "Name: 440, dtype: float64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Busqueda exhastuiva \n",
+    "**Búsqueda exhaustiva:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "opt_vals = fun.busqueda_exhaustiva(data_Train_tec)\n",
     "opt_vals"
    ]
@@ -5363,33 +5215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <font color= #6B6B6B> 7.1.1 Gráfica: Evolución de Capital</font> ya no va\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cash = 100742.7246\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Traiding final con los datos de entrenamiento aplicados en el test mediante el Busqueda Exhaustiva\n",
-    "trading_test = fun.tradear(data_Test_tec, opt_vals[\"stop_loss\"], opt_vals[\"take_profit\"], opt_vals[\"volumen\"],optimizar=False)\n",
-    "print(f'Cash = {trading_test[-1]:.4f}')"
+    "**PSO:**"
    ]
   },
   {
@@ -5417,28 +5243,8 @@
     }
    ],
    "source": [
-    "#v PSO basado en los datos train \n",
     "best_cost, best_args = fun.busqueda_pso(data_Train_tec)\n",
     "display(best_args) # Argumentos que salen "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Profit busqueda pso: $100,743.0612\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Traiding final con los datos de entrenamiento aplicados en el test mediante el PSO\n",
-    "trading_pso_test = fun.tradear(data_Test_tec, best_args[0] , best_args[1], best_args[2],optimizar=False)\n",
-    "print(f\"Profit busqueda pso: ${trading_pso_test[-1]:,.4f}\")"
    ]
   },
   {
@@ -5452,7 +5258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color= #6B6B6B> 7.1.2 Backtest data</font>"
+    "### <font color= #6B6B6B> 7.1.1 Gráfica: Evolución de Capital</font>"
    ]
   },
   {
@@ -6833,6 +6639,98 @@
    ],
    "source": [
     "graph_capital(traiding_train, trading_pso_test,\"Evolucion de Capital\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se observa en la gráfica que ...."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color= #6B6B6B> 7.2 Periodo de prueba</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color= #6B6B6B> 7.2.1 Data de Prueba</font> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Traiding de prueba con los datos de entrenamiento aplicados en el test mediante Búsqueda Exhaustiva:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cash = 100742.7246\n"
+     ]
+    }
+   ],
+   "source": [
+    "trading_test = fun.tradear(data_Test_tec, opt_vals[\"stop_loss\"], opt_vals[\"take_profit\"], opt_vals[\"volumen\"],optimizar=False)\n",
+    "print(f'Cash = {trading_test[-1]:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Traiding de prueba con los datos de entrenamiento aplicados en el test mediante el PSO:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Profit busqueda pso: $100,743.0612\n"
+     ]
+    }
+   ],
+   "source": [
+    "trading_pso_test = fun.tradear(data_Test_tec, best_args[0] , best_args[1], best_args[2],optimizar=False)\n",
+    "print(f\"Profit busqueda pso: ${trading_pso_test[-1]:,.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color= #6B6B6B> 7.2.1 Gráfica: Evolución de Capital</font>"
    ]
   },
   {
@@ -8219,85 +8117,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>"
+    "Se observa en la gráfica que ..."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <font color= #6B6B6B> 7.2 Periodo de prueba</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <font color= #6B6B6B> 7.2.1 Gráfica: Evolución de Capital</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <font color= #6B6B6B> 7.2.1 Data de Prueba</font> "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -8352,7 +8173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
