--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5116,8 +5116,8 @@
     "\n",
     "**Método de optimización**\n",
     "\n",
-    "- PSO (Optimización por Enjambre de Partículas)\n",
-    "- Búsqueda exhaustiva"
+    "- PSO (Optimización por Enjambre de Partículas): Utiliza una población de soluciones candidatas, representadas como partículas, que se mueven alrededor de un espacio de búsqueda para encontrar la mejor solución.\n",
+    "- Búsqueda exhaustiva: Evaluación sistemática de todas las posibles soluciones."
    ]
   },
   {
@@ -6645,7 +6645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se observa en la gráfica que ...."
+    "Se observa en la gráfica una comparativa entre dos series de tiempo: La primera serie con los primeros datos entrenados junto con la serie del testeo con los mejores parámetros usando el método de Optimización por Enjambre de Partículas (PSO). Donde se ve claramente el contraste de volatilidad con y sin la optimización. PSO en cuanto al tiempo es muy rápido dando los argumentos en 17 segundos."
    ]
   },
   {
@@ -8117,14 +8117,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se observa en la gráfica que ..."
+    "Se observa una gráfica de la evolución del capital ahora utilizando el método de busqueda exhaustiva para obtener los mejores argumentos en la función para optimizar nuestro capital final. Igual que el caso de PSO se ve muy claro el contraste y los resultados fueron muy parecidos ambos dando una ganancia en el capital."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>"
+    "</br>"
    ]
   },
   {
@@ -8173,7 +8173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
