--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -491,6 +491,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Estudios Técnicos**: \n",
+    "\n",
+    "- Bandas Bollinger: Ayuda a identificar la volatilidad y la tendencia de un mercado financiero. Cuando la volatilidad es alta, las bandas se expanden, y cuando la volatilidad es baja, las bandas se contraen. Se compone de tres líneas que se dibujan en un gráfico de precios: La línea central es una media móvil simple, mientras que las otras dos líneas se dibujan por encima y por debajo de la línea central y representan el desviación estándar de los precios con respecto a la media móvil.\n",
+    "\n",
+    "$$\\text{BB}(t) = \\text{MA}(t) + k*\\text{SD}(t)$$\n",
+    "\n",
+    "- Oscilador Estocástico: Mide la posición de un precio de cierre actual en relación con su rango de precios en un período de tiempo determinado.El oscilador estocástico se representa como una línea que oscila entre 0 y 100. Los valores por encima del 80 se consideran sobrecomprados, mientras que los valores por debajo del 20 se consideran sobrevendidos.\n",
+    "\n",
+    "$$ \\%K = ((C - L_n) / (H_n - L_n)) x 100$$\n",
+    "\n",
+    "- MACD (Moving Average Convergence Divergence): Se compone de dos medias móviles exponenciales (EMA) que se restan entre sí, lo que permite a los traders y analistas identificar cambios en la tendencia y posibles oportunidades de compra o venta.\n",
+    "\n",
+    "$$MACD = EMA(12) - EMA(26)$$\n",
+    "\n",
+    "En el caso de este laboratorio la estrategia es que se abra o se cierre una posición si dos de estos indicadores concuerdan con sus señales."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <font color= #6B6B6B> 5.1 Propuesta de algoritmo </font> <font color= #555555>"
    ]
   },
@@ -5040,7 +5061,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Queda pendiente MACD "
+    "En las gráficas se puede confirmar las señales de compra y de venta de cada indicador que concuerdan con los datos de arriba. "
    ]
   },
   {
